Add vercel analytics

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",
     "dexie": "^4.0.10",
     "dexie-react-hooks": "^1.1.7",
     "next": "15.0.4",
